# qz

./: .gitignore  .pre-commit-config.yaml  PKGBUILD  README.md  pyproject.toml  qz.py  test_qz.py
tests/: __init__.py  conftest.py  test_add.py  test_misc.py  test_root.py  test_start.py  test_stop.py
