[project]
name = "qz"
description = "Minimal time tracking CLI app"
readme = "README.md"
license = "Unlicense"
authors = [
  { name = "Tiago Seabra", email = "tlgs@users.noreply.github.com" },
]
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

urls = { Homepage = "https://github.com/tlgs/qz" }
scripts = { qz = "qz:main" }

[project.optional-dependencies]
dev = [
  "coverage[toml]",
  "pre-commit",
  "pytest",
]


[tool.coverage]
run.command_line = "-m pytest"
run.branch = true
run.source = ["qz"]

report.show_missing = true
report.fail_under = 80
report.exclude_lines = [
  '# pragma: no cover\b',
  'if __name__ == "__main__":$',
]


[tool.hatch]
version.path = "qz.py"
build.targets.wheel.only-include = ["qz.py"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
