[project]
name = "qz"
description = "Minimal time tracking CLI app"
readme = "README.md"
license = "0BSD"
authors = [
  { name = "Tiago Seabra", email = "tlgs@users.noreply.github.com" },
]
dynamic = ["version"]

urls = { Homepage = "https://github.com/tlgs/qz" }
scripts = { qz = "qz:main" }

[project.optional-dependencies]
dev = [
  "coverage[toml]",
  "pre-commit",
  "pytest",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B"]
ignore = ["W191", "E111", "E114", "E117", "E501"]

[tool.coverage]
run.command_line = "-m pytest"
run.branch = true
run.source = ["qz"]

report.show_missing = true
report.fail_under = 80
report.exclude_lines = [
  '# pragma: no cover\b',
  'if __name__ == "__main__":$',
]

[tool.hatch]
version.path = "qz.py"
build.targets.wheel.only-include = ["qz.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
