[project]
name = "qz"
description = "Minimal time tracking CLI app"
readme = "README.md"
license = "0BSD"
scripts = { qz = "qz:main" }
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "coverage[toml]",
  "pre-commit",
  "pytest",
]

[tool.setuptools]
py-modules = ["qz"]
dynamic.version = { attr = "qz.__version__" }

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B"]
ignore = ["W191", "E111", "E114", "E117", "E501"]

[tool.coverage]
run.command_line = "-m pytest"
run.branch = true
run.source = ["qz"]

report.show_missing = true
report.fail_under = 80
report.exclude_lines = [
  '# pragma: no cover\b',
  'if __name__ == "__main__":$',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
